staging/src/k8s.io/api/testdata/HEAD/networking.k8s.io.v1beta1.Ingress.json
{
  "kind": "Ingress",
  "apiVersion": "networking.k8s.io/v1beta1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "tenant": "4",
    "namespace": "5",
    "selfLink": "6",
    "uid": "ą飋īqJ枊a8衍`Ĩɘ.蘯6ċV夸e",
    "hashkey": 2234230302359329354,
    "resourceVersion": "16964250748386560239",
    "generation": 5828590068104375683,
    "creationTimestamp": null,
    "deletionGracePeriodSeconds": 6797158496028726353,
    "labels": {
      "8": "9"
    },
    "annotations": {
      "10": "11"
    },
    "ownerReferences": [
      {
        "apiVersion": "12",
        "kind": "13",
        "name": "14",
        "uid": "z廔ȇ{sŊƏ",
        "hashkey": -3769286901598778062,
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "15"
    ],
    "clusterName": "16",
    "managedFields": [
      {
        "manager": "17",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "18",
        "fields": {"19":{"20":null}}
      }
    ]
  },
  "spec": {
    "backend": {
      "serviceName": "25",
      "servicePort": "26"
    },
    "tls": [
      {
        "hosts": [
          "27"
        ],
        "secretName": "28"
      }
    ],
    "rules": [
      {
        "host": "29",
        "http": {
          "paths": [
            {
              "path": "30",
              "backend": {
                "serviceName": "31",
                "servicePort": -213805612
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "loadBalancer": {
      "ingress": [
        {
          "ip": "32",
          "hostname": "33"
        }
      ]
    }
  }
}
